--- a/posts.html
+++ b/posts.html
@@ -37,28 +37,39 @@
         </nav>
     </div>
 
-    <div class="container mt-4">
-        <div class="card shadow-sm">
-            <div class="card-body">
-                <form id="postForm" class="mb-3">
-                    <div class="form-group mb-3">
-                        <textarea id="postText" class="form-control" rows="3" placeholder="Escribe tu publicación..."></textarea>
-                    </div>
-                    <div class="form-group mb-3">
-                        <label for="postImage" class="form-label">Adjuntar imagen:</label>
-                        <input type="file" id="postImage" class="form-control">
-                    </div>
-                    <button type="submit" class="btn btn-primary w-100">Publicar</button>
-                </form>
+    <div class="container text-center mt-4">
+      <div class="row">
+        <div class="col md-3 me-5">
+          <div id="welcomeSection" class="mt-5 text-center profile-card me-1 mt-1">
+            <p class="display-6">Bienvenido a Petspace</p>
+            <h2 id="userName"></h2>
+            <img id="userAvatar" src="" alt="Avatar" class="rounded-circle mb-3" width="100" height="100">
+            <p id="descripción">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit nemo voluptatibus maxime nobis, tempore delectus explicabo optio reprehenderit corporis?</p>
+          </div>    
+        </div>
+        <div class="col md-6">
+          <div class="card mb-4">
+            <div class="card shadow-sm">
+                <div class="card-body">
+                    <form id="postForm" class="mb-3">
+                        <div class="form-group mb-3">
+                            <textarea id="postText" class="form-control" rows="3" placeholder="Escribe tu publicación..."></textarea>
+                        </div>
+                        <div class="form-group mb-3">
+                            <label for="postImage" class="form-label">Adjuntar imagen:</label>
+                            <input type="file" id="postImage" class="form-control">
+                        </div>
+                        <button type="submit" class="btn btn-primary w-100">Publicar</button>
+                    </form>
+                </div>
+            </div>
+          </div>
+          <!-- Contenedor de publicaciones -->
+            <div id="postsContainer" class="row gy-4">
+              <!-- Las publicaciones se añadirán aquí -->
             </div>
         </div>
-    </div>
-
-    <!-- Contenedor de publicaciones -->
-    <div class="container mt-4">
-        <div id="postsContainer" class="row gy-4">
-            <!-- Las publicaciones se añadirán aquí -->
-        </div>
+      </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
