--- a/posts.html
+++ b/posts.html
@@ -23,7 +23,7 @@
               <!-- Nav -->
               <ul class="navbar-nav ms-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="tasks.html" id="tasks">Tareas <span class="visually-hidden">(current)</span></a>
+                  <a class="nav-link" href="#" id="tasks">Perfil <span class="visually-hidden">(current)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="posts.html" id="posts">Publicaciones</a>
@@ -55,11 +55,11 @@
                         <div class="form-group mb-3">
                             <textarea id="postText" class="form-control" rows="3" placeholder="Escribe tu publicación..."></textarea>
                         </div>
-                        <div class="form-group mb-3">
+                        <div id="agregarPost" class="form-group mb-3">
                             <label for="postImage" class="form-label">Adjuntar imagen:</label>
                             <input type="file" id="postImage" class="form-control">
                         </div>
-                        <button type="submit" class="btn btn-primary w-100">Publicar</button>
+                        <button id="agregaBtn" type="submit" class="btn btn-primary w-100">Publicar</button>
                     </form>
                 </div>
             </div>
