--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                                     <label for="loginPassword" class="form-label">Contraseña</label>
                                     <input type="password" id="loginPassword" class="form-control" placeholder="Ingresa tu contraseña" required autocomplete="current-password">
                                 </div>
-                                <button type="submit" class="btn btn-primary">Ingresar</button>
-                                <button id="loginGoogleBtn" class="btn btn-danger mt-2" aria-label="Iniciar Sesión con Google">Iniciar Sesión con Google</button>
+                                <button type="submit"  class="botoni btn btn-primary">Ingresar</button>
+                                <button id="loginGoogleBtn" class="btn  mt-2" aria-label="Iniciar Sesión con Google">Iniciar Sesión con Google</button>
                                 <button id="showRegisterForm" type="button" class="btn btn-link mt-3" aria-label="Registrarse">¿No tienes cuenta? Regístrate aquí</button>
                             </form>
                         </div>
