--- a/posts.html
+++ b/posts.html
@@ -53,7 +53,7 @@
       
 
         </div>
-        <div class="col md-6 bg-none ">
+        <div class="col md-6  ">
           
             <div class="card bg-none publicacion mb-4 " style="background-color: #F7E9F0;" id="publicacion">
                 <div class="card-body ">
