Ultimas actualizaciones comentarios

--- a/posts.html
+++ b/posts.html
@@ -25,7 +25,7 @@
                 <!-- Nav -->
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item active">
-                        <a class="nav-link text-white" href="nosotros.html" id="tasks">Sobre Nosotros <span class="visually-hidden">(current)</span></a>
+                        <!-- <a class="nav-link text-white" href="nosotros.html" id="tasks">Sobre Nosotros <span class="visually-hidden">(current)</span></a> -->
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="posts.html" id="posts">Publicaciones</a>
