arreglo del nav

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
                 <!-- Brand -->
                 <img src="https://cdn-icons-png.flaticon.com/512/620/620851.png" style="width: 3.5%; margin: 6px;" alt="">
                 <a class="navbar-brand text-white" href="#">PetSpace</a>
+                
                 <!-- Toggler -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent2" aria-controls="navbarSupportedContent2" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+                <a class="nav-link text-white" href="nosotros.html" id="tasks">Sobre Nosotros <span class="visually-hidden">(current)</span></a>
                 <!-- Collapse -->
                 <div class="collapse navbar-collapse" id="navbarSupportedContent2">
                     <!-- Nav -->
